--- a/style.css
+++ b/style.css
@@ -19,6 +19,22 @@ body {
   border-right: 1px solid rgb(236, 236, 236);
 }
 
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+
+    height: 100%;
+    margin: 0 auto;
+    border-left: 1px solid rgb(236, 236, 236);
+    border-right: 1px solid rgb(236, 236, 236);
+  }
+  .tweetBodyInner > p {
+    margin-left: 10px;
+    margin-top: 5px;
+    font-size: 1.4rem;
+  }
+}
+
 .header {
   display: flex;
   height: 40px;
