--- a/style.css
+++ b/style.css
@@ -19,22 +19,6 @@ body {
   border-right: 1px solid rgb(236, 236, 236);
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    width: 100%;
-
-    height: 100%;
-    margin: 0 auto;
-    border-left: 1px solid rgb(236, 236, 236);
-    border-right: 1px solid rgb(236, 236, 236);
-  }
-  .tweetBodyInner > p {
-    margin-left: 10px;
-    margin-top: 5px;
-    font-size: 1.4rem;
-  }
-}
-
 .header {
   display: flex;
   height: 40px;
@@ -199,4 +183,29 @@ a {
 
 .tweetActions > a {
   color: grey;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    min-width: 300px;
+  }
+  h4 {
+    font-size: 14px;
+  }
+  p {
+    font-size: 13px;
+  }
+  .tweetBodyInner p {
+    font-size: 12px;
+  }
+  .moreInfo {
+    position: absolute;
+    right: 10px;
+    top: 0 -5px;
+    font-size: 18px;
+  }
+  .follow {
+    transform: scale(0.8);
+  }
 }
